  * Ensure that the migration-assistant page is shown in
    test_pages_fit_on_a_netbook.
  * Make the migration-assistant tree view expand again (LP: #946123).

  [ Stéphane Graber ]
  * gtk_ui: Set virtual terminal font to "Ubuntu Mono 8" so in most cases
    two lines of text can now be displayed. (LP: #830946)
  * Change ubiquity/text/webcam_heading to be generic (LP: #926493)

 -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 06 Mar 2012 14:39:01 -0500

ubiquity (2.9.24) precise; urgency=low

  * webcam:
    - image-capture-encoder is deprecated, just drop it for now
    - gst_caps_new_simple needs to use a supported width/height,
      going with 640x480 as it seems standard for most webcams.
      (LP: #942030)
  * ubi-console-setup: On automatic install, don't wait 600ms or
    dbfilter will be None by the time the timer reaches 0 (LP: #944614)
  * debian/control: Add an explicit dependency on realpath to prevent
    check-missing-firmware from crashing. In d-i, realpath is provided
    by busybox.

 -- Stéphane Graber <stgraber@ubuntu.com>  Fri, 02 Mar 2012 17:37:36 -0500

ubiquity (2.9.23) precise; urgency=low

  * ubi-console-setup: Revert most of the previous change but keep the
    600ms timeout to avoid entering in a gtk main loop quit/start flood.
    Also add some more checks of the current values to prevent the UI
    from refreshing when not needed. (LP: #942560)
  * gtk_ui: Move the pending_quits handling code from being called right
    after the call to main_quit() to right after the main loop actually
    exits. This seems to help quite a bit with the race discovered in
    ubi-console-setup.

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 29 Feb 2012 20:42:24 -0500

ubiquity (2.9.22) precise; urgency=low

  * ubi-partman:
    - Avoid crash when calling contextual menu on a partition list item.
      (LP: #936115)
    - Add logic to parse the current and new version number and only